tests/bad/sv_format_not_simple.oc
/// fail: Can only format std::sv::SV in simple expressions

import std::sv::SV

def main() {
    let s = SV::from_str("hello foo")
    println(`{s.chop_word()} bar`)
}